--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
 <body>
   <h1>NASA Image Gallery</h1>
   <div id="gallery"></div>
-
+<!-- 
   <button onclick="fetchNASAImages()">Load Supernova Images</button>
-  <p style="color: black;">Click the button to load images of supernovae from NASA's image API.</p>
+  <p style="color: black;">Click the button to load images of supernovae from NASA's image API.</p> -->
 
   <script>
     async function fetchNASAImages() {
@@ -85,7 +85,7 @@
       }
     }
 
-    // fetchNASAImages();
+    fetchNASAImages();
   </script>
 </body>
 </html>
